--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,16 @@
     <title>
         <%= title %>
     </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- css section -->
     <link rel='stylesheet' href='/content/app.css' />
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
     <!-- Script section -->
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/jquery/dist/jquery.min.js" defer></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <!-- Icon -->
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
