--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -33,12 +33,13 @@
                     <a class="nav-link" href="/link"><i class="fa-solid fa-link"></i> Link </a>
                 </li>
             </ul>
-            <form class="d-flex" action="https://you.com/search" method="get">
-                <input class="form-control me-1" type="text" name="q" placeholder="Search... on you.com"
+            <div class="mx-5 border-left border-light"></div>
+                <form class="d-flex" action="https://you.com/search" method="get">
+                    <input class="form-control me-1" type="text" name="q" placeholder="Search... on you.com"
                     aria-label="Search">
-                <input type="hidden" name="sitesearch" value="you.com">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+                    <input type="hidden" name="sitesearch" value="you.com">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
-    </div>
 </nav>
