--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
+<!-- Filename: header.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +7,9 @@
     </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="title" content="Juan Arevalo: AI Developer & Mining Tools Specialist in Toronto">
+    <meta name="description" content="Juan Arevalo, an AI developer in Toronto studying at Centennial College with hands-on experience in abrasion tools for the industry's largest mining loader machines.">
+
     <!-- css section -->
     <link rel='stylesheet' href='/content/app.css' />
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
