--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="Juan Arevalo: AI Developer & Mining Tools Specialist in Toronto">
     <meta name="description" content="Juan Arevalo, an AI developer in Toronto studying at Centennial College with hands-on experience in abrasion tools for the industry's largest mining loader machines.">
-
+    <meta name="google-site-verification" content="qFDrxzTf437MAo4rhygK-L5hKwfq5Z70flF0nk4whss" />
     <!-- css section -->
     <link rel='stylesheet' href='/content/app.css' />
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
