--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,17 +1,18 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
         <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
-        <main class="container py-4 float-sm-start">
-            <div class="jumbotron text-between">
-                <h1 class="display-7">Welcome to the <%=title%> page</h1>
-            </div>
-            <div class="d-flex flex-sm-row flex-column py-5">
-                <div class="p-2 flex-fill">
-                    <div class="card-body text-center">
-                        <img src="../assets/images/juanAre.jpg" alt="Juan" class="rounded-circle img-fluid"
+        <div class="d-flex justify-content-center aligns-items-center wh-100">
+            <main class="container py-4 float-sm-start">
+                <div class="jumbotron text-between">
+                    <h1 class="display-7">Welcome to the <%=title%> page</h1>
+                </div>
+                <div class="d-flex flex-sm-row flex-column py-5">
+                    <div class="p-2 flex-fill">
+                        <div class="card-body text-center">
+                            <img src="../assets/images/juanAre.jpg" alt="Juan" class="rounded-circle img-fluid"
                             style="width: 150px;">
-                        <h5 class="my-3">Juan Arevalo</h5>
-                        <p class="text-muted mb-1">Junior Full Stack Developer</p>
+                            <h5 class="my-3">Juan Arevalo</h5>
+                            <p class="text-muted mb-1">Junior Full Stack Developer</p>
                         <p class="text-muted mb-4">Ajax Area, Ontario, CA</p>
                     </div>
                 </div>
@@ -23,9 +24,9 @@
                                     <div class="card-body p-0">
                                         <ul class="list-group list-group-flush rounded-3">
                                             <li
-                                                class="list-group-item d-flex justify-content-evenly align-items-center p-3">
-                                                <i class="fab fa-github fa-lg" style="color: #333333;"></i>
-                                                <p class="mb-0">Jbaruz</p>
+                                            class="list-group-item d-flex justify-content-evenly align-items-center p-3">
+                                            <i class="fab fa-github fa-lg" style="color: #333333;"></i>
+                                            <p class="mb-0">Jbaruz</p>
                                             </li>
                                             <li
                                                 class="list-group-item d-flex justify-content-evenly align-items-center p-3">
@@ -89,10 +90,10 @@
                                         <div class="mb-3">
                                             <label for="exampleFormControlInput1" class="form-label">Email
                                                 address</label>
-                                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                                <input type="email" class="form-control" id="exampleFormControlInput1"
                                                 placeholder="name@example.com">
-                                        </div>
-                                        <div class="mb-3">
+                                            </div>
+                                            <div class="mb-3">
                                             <label for="exampleFormControlTextarea1" class="form-label">Example
                                                 textarea</label>
                                             <textarea class="form-control" id="exampleFormControlTextarea1"
@@ -106,6 +107,7 @@
 
             </div>
         </main>
-
+    </div>
+        
         <%-include ('partials/bottom_nav.ejs')%>
-            <%-include ('partials/footer.ejs')%>
+        <%-include ('partials/footer.ejs')%>
