--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
     <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
+    <div class="d-flex justify-content-center align-items-center vh-100">
         <main class="container py-4 float-sm-start">
             <div class="jumbotron text-between">
                 <h1 class="display-7">Welcome to the <%=title%> page</h1>
@@ -16,16 +17,16 @@
                                 <blockquote class="roboto mb-0">
                                     <p>Wear control GET remotely and avoid unplanned downtime for P&H4100XPC cable
                                         shovels.</p>
-                                    <footer class="blockquote-footer mb-2">Winner 2021 Digital transformation <cite
+                                        <footer class="blockquote-footer mb-2">Winner 2021 Digital transformation <cite
                                             title="Source Title">- Cerro verde Mine</cite></footer>
-                                </blockquote>
-                                <img src="../assets/images/kiru.png" class="card-img rounded img-fluid mt-3"
-                                    style="width: 18rem;" alt="my photo">
-                                <h5 class="my-1 fs-6">Role</h5>
-                                <p class="text-muted mb-1 fs-6">Manager and creator</p>
-                                <p class="text-muted mb-1 fs-6">Languages: Flutter, PHP Codeigniter</p>
-                            </div>
-                        </div>
+                                        </blockquote>
+                                        <img src="../assets/images/kiru.png" class="card-img rounded img-fluid mt-3"
+                                        style="width: 18rem;" alt="my photo">
+                                        <h5 class="my-1 fs-6">Role</h5>
+                                        <p class="text-muted mb-1 fs-6">Manager and creator</p>
+                                        <p class="text-muted mb-1 fs-6">Languages: Flutter, PHP Codeigniter</p>
+                                    </div>
+                                </div>
                     </div>
                     <div class="p-2 flex-fill">
                         <div class="card" style="width: 18rem;">
@@ -37,10 +38,10 @@
                                     <p>Interactive web to share recipes.</p>
                                     <footer class="blockquote-footer mb-2">First Version <cite title="Source Title">In
                                             progress</cite></footer>
-                                </blockquote>
-                                <img src="../assets/images/reci.png" class="card-img rounded img-fluid mt-3"
-                                    style="width: 18rem;" alt="recipe">
-                                <h5 class="my-1 fs-6">Role</h5>
+                                        </blockquote>
+                                        <img src="../assets/images/reci.png" class="card-img rounded img-fluid mt-3"
+                                        style="width: 18rem;" alt="recipe">
+                                        <h5 class="my-1 fs-6">Role</h5>
                                 <p class="text-muted mb-1 fs-6">Developer</p>
                                 <p class="text-muted mb-1 fs-6">Languages: Python, Flask, MySQL</p>
                             </div>
@@ -55,22 +56,23 @@
                                 <blockquote class="roboto mb-0">
                                     <p>Minimalistic personal portfolio.</p>
                                     <footer class="blockquote-footer mb-2">First Version <cite title="Source Title">-
-                                            Complete</cite></footer>
-                                </blockquote>
-                                <img src="../assets/images/perso.png" class="card-img rounded img-fluid mt-3"
+                                        Complete</cite></footer>
+                                    </blockquote>
+                                    <img src="../assets/images/perso.png" class="card-img rounded img-fluid mt-3"
                                     style="width: 18rem;" alt="Personal Portfolio">
                                 <h5 class="my-1 fs-6">Role</h5>
                                 <p class="text-muted mb-1 fs-6">Developer</p>
                                 <p class="text-muted mb-1 fs-6">Languages: JavaScript - NodeJS - ExpressJS and Express
                                     Generator</p>
-                            </div>
+                                </div>
                         </div>
                     </div>
-
+                    
                 </div>
 
             </div>
         </main>
-
+    </div>
+        
         <%-include ('partials/bottom_nav.ejs')%>
-            <%-include ('partials/footer.ejs')%>
+        <%-include ('partials/footer.ejs')%>
