--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 <!-- Filename: about.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div class="d-flex justify-content-center">
 <main class="container py-4 float-sm-start">
     <div class="jumbotron text-between">
         <h1 class="display-7">Welcome to the <%=title%> page</h1>
