--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,4 +1,5 @@
-<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
+<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="..\assets\images\logo_jbaruz.png" class="img-thumbnail rounded-square ms-4" alt="Logo Juan"></a>
@@ -6,7 +7,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav ml-auto mx-2">
 
                 <li class="nav-item  <%= title === 'Home' ? 'active' : '' %>">
