--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,6 +1,6 @@
 <!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
-<footer class="foot">
-    <nav class="navbar fixed-bottom navbar-light bg-light">
-        <p class="navbar-text fs-6 fst-italic mb-5">&copy; 2023 All rights reserved</p>
+<footer class="foot d-flex align-items-center vh100">
+    <nav class="navbar navbar-light fixed-bottom navbar-light bg-light text-start w-100">
+        <p class="navbar-text fs-6 fst-italic mb-5 ms-3">&copy; 2023 All rights reserved by Jbaruz</p>
     </nav>
 </footer>
