--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,49 +1,44 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
-<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
-<div class="d-flex justify-content-center">
-<main class="container py-4 float-sm-start">
-    <div class="jumbotron text-between">
-        <h1 class="display-7">Welcome to the <%=title%> page</h1>
-    </div>
-    <div class="d-flex flex-sm-row flex-column py-5">
-        <div class="p-2 flex-fill">
-            <div class="card" style="width: 16rem;">
-                <img src="../assets/images/juan1.png" alt="Juan photo" class="rounded img-fluid" style="width: 255px;">
-                <div class="card-body">
-                    <h5 class="card-text text-center">Juan Arevalo</h5>
 
+<!-- Filename: about.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
+<div class="d-flex justify-content-center bg-light vh-100">
+    <main class="container py-5">
+        <div class="jumbotron bg-gradient-light text-center">
+            <h1 class="display-7">Welcome to the <%=title%> page</h1>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-3">
+                <div class="card mb-4 shadow-sm" style="margin-top: 0;">
+                    <img src="../assets/images/juan1.png" alt="Juan photo" class="card-img-top w-100">
+                    <div class="card-body">
+                        <h5 class="card-text text-center">Juan Arevalo</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card shadow-sm" style="margin-top: 0;">
+                    <div class="card-header">
+                        Who I am?
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="roboto mb-3">
+                            <p>Aspiring multilingual software developer with extensive project management experience, strong understanding of wear control of Ground engaging tools of shovels such as P&H4100XPC, CAT7495, EX5600, PC7000, and installation of weld lips for these types of equipment. Passionate about building meaningful products, solving problems, and creating value for the company and customers.</p>
+                        </blockquote>
+                        <blockquote class="roboto mb-3">
+                            <p>Currently, I am an Artificial Intelligence FT student at Centennial College in Toronto, Canada.</p>
+                            <footer class="roboto-footer">Innovator / Attentive / <cite title="Source Title">Problem solver</cite></footer>
+                        </blockquote>
+                        <div class="text-center mt-4">
+                            <a href="../assets/archives/JuanArevalo_Resume_V1.pdf" class="btn btn-outline-primary">View Resume (PDF)</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="p-2 flex-fill">
-            <div class="card" style="width: 47rem;">
-                <div class="card-header">
-                    Who I am?
-                </div>
-                <div class="card-body">
-                    <blockquote class="roboto mb-0">
-                        <p>Aspiring multilingual software developer with extensive project management
-                            experience, strong understanding of wear control of Ground engaging tools
-                            of shovels such as P&H4100XPC, CAT7495, EX5600, PC7000, and installation
-                            of weld lips for these types of equipment. Passionate about building
-                            meaningful products, solving problems, and creating value for the company
-                            and customers.</p>
-                    </blockquote>
-                    <blockquote class="roboto mb-0">
-                        <p>Currently, I am an Artificial Intelligence FT student at Centennial College in Toronto,
-                            Canada.</p>
-                        <footer class="roboto-footer">Innovator / Attentive / <cite title="Source Title">Problem
-                                solver</cite></footer>
-                    </blockquote>
-                </div>
-                <div class="text-center">
-                    <a href="../assets/archives/JuanArevalo_Resume_V1.pdf">Resume PDF</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
+    </main>
 </div>
+
 <%-include ('partials/bottom_nav.ejs')%>
 <%-include ('partials/footer.ejs')%>
