Improve color main_nav pages

--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,6 +1,6 @@
 <!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light vh100 fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="..\assets\images\logo_jbaruz.png" class="img-thumbnail rounded-square ms-4" alt="Logo Juan"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,7 +39,7 @@
                     <input class="form-control me-1" type="text" name="q" placeholder="Search... on you.com"
                     aria-label="Search">
                     <input type="hidden" name="sitesearch" value="you.com">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-secondary" type="submit">Search</button>
                 </form>
             </div>
         </div>
