--- a/public/content/app.css
+++ b/public/content/app.css
@@ -8,3 +8,8 @@
   width: 40px;
   height: 40px;
 }
+
+body {
+  padding-top: 70px;  /* Adjust based on the height of your navbar */
+  background-color: #F8F8F8 !important;
+}
