--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,6 +1,6 @@
 <!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
 
-<nav class="navbar navbar-expand-lg navbar-light vh100 fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light vh100">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="..\assets\images\logo_jbaruz.png" class="img-thumbnail rounded-square ms-4" alt="Logo Juan"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
