Fix main_nav pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,9 @@
 <%-include('partials/header.ejs')%>
 
 <!-- Filename: index.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
-<div class="d-flex justify-content-center align-items-center bg-light">
+<div class="d-flex justify-content-center bg-light">
     <main class="container py-5">
         <div class="jumbotron text-center bg-gradient-light">
-            <br>
             <h1 class="display-4">Embarking on an AI Odyssey!</h1>
             <br>
             <p class="lead">Discover the world of AI through the eyes of a Centennial College student.</p>
@@ -13,7 +12,6 @@
             </blockquote>
             <br>
         </div>
-
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
