Update about pages

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,31 +5,39 @@
 <div class="d-flex justify-content-center bg-light vh-100">
     <main class="container py-5">
         <div class="jumbotron bg-gradient-light text-center">
-            <h1 class="display-7">Welcome to the <%=title%> page</h1>
+            <h1 class="display-7">About Juan Arevalo</h1>
         </div>
 
         <div class="row mt-5">
             <div class="col-md-3">
-                <div class="card mb-4 shadow-sm" style="margin-top: 0;">
+                <div class="card mb-4 shadow-sm">
                     <img src="../assets/images/juan1.png" alt="Juan photo" class="card-img-top w-100">
                     <div class="card-body">
                         <h5 class="card-text text-center">Juan Arevalo</h5>
+                        <p class="text-center">
+                            🌐 <a href="https://jbaruz.dev">jbaruz.dev</a><br>
+                            📧 <a href="mailto:jbaruz@gmail.com">jbaruz@gmail.com</a><br>
+                            🔗 <a href="#">LinkedIn</a> - <a href="#">GitHub</a><br>
+                            📞 (+1) 437-557-6885
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="card shadow-sm" style="margin-top: 0;">
+                <div class="card shadow-sm">
                     <div class="card-header">
                         Who I am?
                     </div>
                     <div class="card-body">
-                        <blockquote class="roboto mb-3">
-                            <p>Aspiring multilingual software developer with extensive project management experience, strong understanding of wear control of Ground engaging tools of shovels such as P&H4100XPC, CAT7495, EX5600, PC7000, and installation of weld lips for these types of equipment. Passionate about building meaningful products, solving problems, and creating value for the company and customers.</p>
-                        </blockquote>
-                        <blockquote class="roboto mb-3">
-                            <p>Currently, I am an Artificial Intelligence FT student at Centennial College in Toronto, Canada.</p>
-                            <footer class="roboto-footer">Innovator / Attentive / <cite title="Source Title">Problem solver</cite></footer>
-                        </blockquote>
+                        <p class="roboto mb-3">
+                            Emerging from a rich heritage of software development and metallurgical engineering, I am a passionate multilingual professional with a zeal for technology and its intersection with real-world problems. My expertise spans from wear abrasion problem analysis to the vibrant realms of Artificial Intelligence. This unique blend empowers me to craft solutions that are both innovative and grounded.
+                        </p>
+                        <p class="roboto mb-3">
+                            My bilingual background in English and Spanish allows me to bridge cultures, fostering collaboration in diverse teams. My journey has ranged from metallurgical engineering at Trujillo National University to the dynamic world of AI at Centennial College, Toronto.
+                        </p>
+                        <p class="roboto mb-3">
+                            With a heart set on continuous learning and an eye for detail, I am always on the lookout for the next challenge, the next problem to solve.
+                        </p>
                         <div class="text-center mt-4">
                             <a href="../assets/archives/JuanArevalo_Resume_V1.pdf" class="btn btn-outline-primary">View Resume (PDF)</a>
                         </div>
