Update projects pages

--- a/public/content/app.css
+++ b/public/content/app.css
@@ -1,4 +1,4 @@
-/* Filename: app.css | Author: Juan Arevalo | Date: 22-08-2023 */
+/* Filename: app.css | Author: Juan Arevalo | Date: 28-08-2023 */
 .navbar.fixed-bottom {
   height: 40px;
 }
@@ -9,5 +9,8 @@
   height: 40px;
 }
 
+.award-img:hover {
+  transform: scale(5.6);
+}
 
 
