Update about pages

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,7 +17,7 @@
                         <p class="text-center">
                             🌐 <a href="https://jbaruz.dev">jbaruz.dev</a><br>
                             📧 <a href="mailto:jbaruz@gmail.com">jbaruz@gmail.com</a><br>
-                            🔗 <a href="#">LinkedIn</a> - <a href="#">GitHub</a><br>
+                            🔗 <a href="https://www.linkedin.com/in/jbaruz/">LinkedIn</a> - <a href="https://github.com/Jbaruz">GitHub</a><br>
                             📞 (+1) 437-557-6885
                         </p>
                     </div>
@@ -39,7 +39,8 @@
                             With a heart set on continuous learning and an eye for detail, I am always on the lookout for the next challenge, the next problem to solve.
                         </p>
                         <div class="text-center mt-4">
-                            <a href="../assets/archives/JuanArevaloResume_V1.pdf" class="btn btn-outline-primary">View Resume (PDF)</a>
+                            <a href="../assets/archives/JuanArevaloResume_V1.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">View Resume (PDF)</a>
+
                         </div>
                     </div>
                 </div>
