--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,7 +11,7 @@
         <div class="row mt-5">
             <div class="col-md-3">
                 <div class="card mb-4 shadow-sm">
-                    <img src="../assets/images/juan1.png" alt="Juan photo" class="card-img-top w-100">
+                    <img src="../assets/images/juan1.jpeg" alt="Juan photo" class="card-img-top w-100">
                     <div class="card-body">
                         <h5 class="card-text text-center">Juan Arevalo</h5>
                         <p class="text-center">
