--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,61 +1,51 @@
 <%-include('partials/header.ejs')%>
-    <%-include('partials/main_nav.ejs')%>
-    <!-- Filename: services.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
-        <main class="container py-4">
-            <div class="jumbotron text-between">
-                <h1 class="display-7">Welcome to the <%=title%> page</h1>
-            </div>
-            <div class="container bootstrap snippets bootdey py-5">
-                <section id="services" class="current">
-                    <div class="services-top">
-                        <div class="container bootstrap snippets bootdey">
-                            <div class="row text-center py-3">
-                                <div class="col-sm-12 col-md-12 col-md-12">
-                                    <h2>What I Offer</h2>
-                                    <p>My <span class="highlight">focused</span> and <span class="highlight">committed
-                                            efforts</span> to achieving my best in the most efficient and effective way
-                                        possible.</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-offset-1 col-sm-12 col-md-12 col-md-10">
-                                    <div class="services-list">
-                                        <div class="row">
-                                            <div class="col-sm-6 col-md-4 col-md-4">
-                                                <div class="service-block" style="visibility: visible;">
-                                                    <div class="ico fa fa-magic highlight fa-xl"></div>
-                                                    <div class="text-block">
-                                                        <div class="name fw-bold py-2">Web Design</div>
-                                                        <div class="info fst-italic">Beauty and function</div>
-                                                        <div class="text fw-light">Lorem ipsum dolor sit amet,
-                                                            consectetur adipiscing elit. Pellentesque habitant morbi
-                                                            tristique senectus et netus et malesuada fames </div>
-                                                    </div>
-                                                </div>
+<%-include('partials/main_nav.ejs')%>
+<!-- Filename: services.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
+<main class="container py-4">
+    <div class="jumbotron text-between">
+        <h1 class="display-7">Welcome to the <%=title%> page</h1>
+    </div>
+    <div class="container bootstrap snippets bootdey py-5">
+        <section id="services" class="current">
+            <div class="services-top">
+                <div class="container bootstrap snippets bootdey">
+                    <div class="row text-center py-3">
+                        <div class="col-sm-12 col-md-12 col-md-12">
+                            <h2>What I Offer</h2>
+                            <p>With over 18 years of experience in wear abrasion solutions and a veteran in large mining equipment loaders, I offer unparalleled expertise combined with the latest in AI advancements.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-offset-1 col-sm-12 col-md-12 col-md-10">
+                            <div class="services-list">
+                                <div class="row">
+                                    <div class="col-sm-6 col-md-4 col-md-4">
+                                        <div class="service-block" style="visibility: visible;">
+                                            <div class="ico fa fa-hard-hat highlight fa-xl"></div>
+                                            <div class="text-block">
+                                                <div class="name fw-bold py-2">Mining Equipment Expertise</div>
+                                                <div class="info fst-italic">Deep Knowledge in Wear Control</div>
+                                                <div class="text fw-light">Veteran in wear abrasion solutions for loaders like P&H4100XPC, CAT7495, and more. Extensive experience in weld lip installations and understanding wear control for ground-engaging tools of shovels.</div>
                                             </div>
-                                            <div class="col-sm-6 col-md-4 col-md-4">
-                                                <div class="service-block" style="visibility: visible;">
-                                                    <div class="ico fa fa-code highlight fa-xl"></div>
-                                                    <div class="text-block">
-                                                        <div class="name fw-bold py-2">Development/Coding</div>
-                                                        <div class="info fst-italic">Quality code that lasts</div>
-                                                        <div class="text fw-light">Lorem ipsum dolor sit amet,
-                                                            consectetur adipiscing elit. Pellentesque habitant morbi
-                                                            tristique senectus et netus et malesuada fames </div>
-                                                    </div>
-                                                </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 col-md-4">
+                                        <div class="service-block" style="visibility: visible;">
+                                            <div class="ico fa fa-cogs highlight fa-xl"></div>
+                                            <div class="text-block">
+                                                <div class="name fw-bold py-2">Project Management</div>
+                                                <div class="info fst-italic">Solving Complex Problems</div>
+                                                <div class="text fw-light">18+ years in Latin America's leading mines, creating value and addressing intricate challenges with renowned reputation in the industry.</div>
                                             </div>
-                                            <div class="col-sm-6 col-md-4 col-md-4">
-                                                <div class="service-block" style="visibility: visible;">
-                                                    <div class="ico fa fa-pencil highlight fa-xl"></div>
-                                                    <div class="text-block">
-                                                        <div class="name fw-bold py-2">Copy Writing</div>
-                                                        <div class="info fst-italic">Words that tell your story</div>
-                                                        <div class="text fw-light">Lorem ipsum dolor sit amet,
-                                                            consectetur adipiscing elit. Pellentesque habitant morbi
-                                                            tristique senectus et netus et malesuada fames </div>
-                                                    </div>
-                                                </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6 col-md-4 col-md-4">
+                                        <div class="service-block" style="visibility: visible;">
+                                            <div class="ico fa fa-brain highlight fa-xl"></div>
+                                            <div class="text-block">
+                                                <div class="name fw-bold py-2">AI Advancements</div>
+                                                <div class="info fst-italic">The Future of Mining</div>
+                                                <div class="text fw-light">Currently advancing my AI skills at Centennial College, aiming to merge AI technologies with wear abrasion solutions to bring forth efficiency and innovation in the mining industry.</div>
                                             </div>
                                         </div>
                                     </div>
@@ -63,8 +53,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
-        </main>
-        <%-include ('partials/bottom_nav.ejs')%>
-            <%-include ('partials/footer.ejs')%>
+        </section>
+    </div>
+</main>
+<%-include ('partials/bottom_nav.ejs')%>
+<%-include ('partials/footer.ejs')%>
