--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 28-08-2023 -->
         <div class="d-flex justify-content-center">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-between">
@@ -9,12 +9,12 @@
                 <div class="d-flex flex-sm-row flex-column py-5">
                     <div class="p-2 flex-fill">
                         <div class="card-body text-center">
-                            <img src="../assets/images/juanAre.jpg" alt="Juan" class="rounded-circle img-fluid"
-                            style="width: 150px;">
+                            <img src="../assets/images/juanAre.jpg" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3">Juan Arevalo</h5>
-                            <p class="text-muted mb-1">Junior Full Stack Developer</p>
-                        <p class="text-muted mb-4">Ajax Area, Ontario, CA</p>
-                    </div>
+                            <p class="text-muted mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
+                            <a href="/" class="text-muted mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
+                            <p class="text-muted mb-4">Ajax Area, Ontario, CA</p>
+                        </div>
                 </div>
                 <div class="p-2 flex-fill">
                     <section style="background-color: white;">
