--- a/views/link.ejs
+++ b/views/link.ejs
@@ -8,64 +8,90 @@
         
         <div class="col-md-4 mb-3">
             <div class="card text-center">
-                <i class="fa fa-university card-img-top mt-3" style="font-size: 2em; color: #000000;"></i>
+                <i class="fa fa-university card-img-top mt-3" style="font-size: 1.5em; color: #000000;"></i>
                 <div class="card-body">
                     <h5 class="card-title">Centennial College</h5>
-                    <a href="https://www.centennialcollege.ca/" class="btn btn-light">Visit</a>
+                    <a href="https://www.centennialcollege.ca/" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4 mb-3">
             <div class="card text-center">
-                <i class="fa fa-database card-img-top mt-3" style="font-size: 2em; color: #000;"></i>
+                <i class="fa fa-database card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
                 <div class="card-body">
                     <h5 class="card-title">Kaggle</h5>
-                    <a href="https://www.kaggle.com" class="btn btn-light">Visit</a>
+                    <a href="https://www.kaggle.com" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4 mb-3">
             <div class="card text-center">
-                <i class="fa fa-code card-img-top mt-3" style="font-size: 2em; color: #000;"></i>
+                <i class="fa fa-code card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
                 <div class="card-body">
                     <h5 class="card-title">Visualize Code</h5>
-                    <a href="https://pythontutor.com/visualize.html#mode=edit" class="btn btn-light">Visit</a>
+                    <a href="https://pythontutor.com/visualize.html#mode=edit" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4 mb-3">
             <div class="card text-center">
-                <i class="fa fa-file-alt card-img-top mt-3" style="font-size: 2em; color: #000;"></i>
+                <i class="fa fa-file-alt card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
                 <div class="card-body">
                     <h5 class="card-title">Readme.so</h5>
-                    <a href="https://readme.so/editor" class="btn btn-light">Visit</a>
+                    <a href="https://readme.so/editor" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4 mb-3">
             <div class="card text-center">
-                <i class="fa fa-book card-img-top mt-3" style="font-size: 2em; color: #000;"></i>
+                <i class="fa fa-book card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
                 <div class="card-body">
                     <h5 class="card-title">API Documentation</h5>
-                    <a href="https://devdocs.io" class="btn btn-light">Visit</a>
+                    <a href="https://devdocs.io" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
                 </div>
             </div>
         </div>
 
         <div class="col-md-4 mb-3">
             <div class="card text-center">
-                <i class="fa fa-project-diagram card-img-top mt-3" style="font-size: 2em; color: #000;"></i>
+                <i class="fa fa-project-diagram card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
                 <div class="card-body">
                     <h5 class="card-title">PlantUML</h5>
-                    <a href="https://www.plantuml.com/plantuml/uml/SyfFKj2rKt3CoKnELR1Io4ZDoSa70000" class="btn btn-light">Visit</a>
+                    <a href="https://www.plantuml.com/plantuml/uml/SyfFKj2rKt3CoKnELR1Io4ZDoSa70000" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
                 </div>
             </div>
         </div>
-
+        <div class="col-md-4 mb-3">
+            <div class="card text-center">
+                <i class="fas fa-chart-line card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
+                <div class="card-body">
+                    <h5 class="card-title">Seaborn</h5>
+                    <a href="https://seaborn.pydata.org" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card text-center">
+                <i class="fas fa-robot card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
+                <div class="card-body">
+                    <h5 class="card-title">Scikit-learn</h5>
+                    <a href="https://scikit-learn.org/stable/" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card text-center">
+                <i class="fas fa-table card-img-top mt-3" style="font-size: 1.5em; color: #000;"></i>
+                <div class="card-body">
+                    <h5 class="card-title">Pandas</h5>
+                    <a href="https://pandas.pydata.org/pandas-docs/stable/user_guide/visualization.html" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
