Update projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -41,7 +41,7 @@
             <!-- Colombia -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
-                    <img src="../assets/images/dragline.jpg" alt="03 Aquadigger Hoe Bucket rebuild Aleman Zubieta Dredge" class="card-img-top">
+                    <img src="../assets/images/dragline.png" alt="Dragline bucket" class="card-img-top">
                     <div class="card-body">
                         <h5>Assembly Dragline Bucket</h5>
                         <p>Assembled 115CY Profill Bucket in 20 days.</p>
@@ -53,7 +53,7 @@
             <!-- Panama -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
-                    <img src="../assets/images/bucket_panama.png" alt="03 Aquadigger Hoe Bucket rebuild Aleman Zubieta Dredge" class="card-img-top">
+                    <img src="../assets/images/bucket_panama.png" alt="Aquadigger bucket Dredge" class="card-img-top">
                     <div class="card-body">
                         <h5>Rebuild for Manufacturer Warranty</h5>
                         <p>03 Aquadigger Hoe Bucket rebuilt for Aleman Zubieta Dredge - Dredging for the Culebra Cut Expansion Project.</p>
@@ -65,7 +65,7 @@
             <!-- Peru -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
-                    <img src="../assets/images/ant_cable.jpg" alt="03 Aquadigger Hoe Bucket rebuild Aleman Zubieta Dredge" class="card-img-top">
+                    <img src="../assets/images/ant_cable.png" alt="Cable shovel photo" class="card-img-top">
                     <div class="card-body">
                         <h5>Six Sigma Project</h5>
                         <p>Decreased cable shovel downtime from GET issues from 30 hours to 5 hours per month.</p>
