--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
 
 <!-- Filename: index.ejs | Author: Juan Arevalo | Date: 24-08-2023 -->
-<div class="d-flex justify-content-center bg-light">
+<div class="d-flex justify-content-center bg-light vh-100">
     <main class="container py-5">
         <div class="jumbotron text-center bg-gradient-light">
             <h1 class="display-4">Embarking on an AI Odyssey!</h1>
