Add Ai project to project  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -12,6 +12,19 @@
             <!-- Personal Portfolio -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
+                    <img src="../assets/images/fatalities_TO.png" alt="Fatal Traffic Collisions" class="card-img-top">
+                    <div class="card-body">
+                        <h5>AI project</h5>
+                        <p>Develop a personal probalistic application to predict accidents in Toronto, according to conditions patterns</p>
+                        <p><strong>Role:</strong> AI Developer</p>
+                        <p><strong>Languages:</strong> Python</p>
+                        <p><strong>Status:</strong> In progress - first step</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Personal Portfolio -->
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm">
                     <img src="../assets/images/perso.png" alt="Personal Portfolio Web App" class="card-img-top">
                     <div class="card-body">
                         <h5>Personal Portfolio (Web App)</h5>
