Update projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -15,7 +15,7 @@
                     <img src="../assets/images/fatalities_TO.png" alt="Fatal Traffic Collisions" class="card-img-top">
                     <div class="card-body">
                         <h5>AI project</h5>
-                        <p>Develop a personal probalistic application to predict accidents in Toronto, according to conditions patterns</p>
+                        <p>Develop a personal probalistic application to predict accidents in Toronto, according to condition and behavior patterns.</p>
                         <p><strong>Role:</strong> AI Developer</p>
                         <p><strong>Languages:</strong> Python</p>
                         <p><strong>Status:</strong> In progress - first step</p>
