Add a group project on  projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -9,7 +9,7 @@
         </div>
 
         <div class="row mt-5">
-            <!-- Personal Portfolio -->
+            <!-- AI Project -->
             <div class="col-md-4 mb-4">
                 <div class="card shadow-sm">
                     <img src="../assets/images/fatalities_TO.png" alt="Fatal Traffic Collisions" class="card-img-top">
@@ -19,6 +19,19 @@
                         <p><strong>Role:</strong> AI Developer</p>
                         <p><strong>Languages:</strong> Python</p>
                         <p><strong>Status:</strong> In progress - first step</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Tournament Project -->
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm">
+                    <img src="../assets/images/tournament_web.png" alt="Fatal Traffic Collisions" class="card-img-top">
+                    <div class="card-body">
+                        <h5>Tournament Creation by Time Travellers Team</h5>
+                        <p>The Application is about tournament management, part of a group assignment at Centennial College.</p>
+                        <p><strong>Role:</strong> Backend Developer</p>
+                        <p><strong>Languages:</strong> Angular, ExpressJS, NodeJS, MongoDB, Angular Material, Git</p>
+                        <p><strong>Status:</strong> Complete - <a href="https://tournaments-frontend.onrender.com/" target="_blank">Website</a></p>
                     </div>
                 </div>
             </div>
