Add a group project on  projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -41,9 +41,10 @@
                     <img src="../assets/images/perso.png" alt="Personal Portfolio Web App" class="card-img-top">
                     <div class="card-body">
                         <h5>Personal Portfolio (Web App)</h5>
-                        <p>Minimalistic personal portfolio. A second version is in progress.</p>
+                        <p>Minimalistic personal portfolio.</p>
                         <p><strong>Role:</strong> Developer</p>
-                        <p><strong>Languages:</strong> JavaScript, NodeJS, ExpressJS, Express Generator</p>
+                        <p><strong>Languages:</strong> JavaScript, NodeJS, ExpressJS, Express Generator, Bootstrap, Jquery.</p>
+                        <p><strong>Status:</strong> In progress - <a href="https://github.com/Jbaruz/jbaruz" target="_blank">Github repo</a></p>
                     </div>
                 </div>
             </div>
