Add star war effect on index page and starwars.css  pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,9 +14,9 @@
     <link rel='stylesheet' href='/content/app.css' />
     <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
-    <!-- Script section -->
-    <script src="/jquery/dist/jquery.min.js" defer></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <link rel="stylesheet" href="/content/starwars.css">
+
+
     <!-- Icon -->
     <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
 </head>
