--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,18 @@
             <!-- Add this line where you want to display the last updated date -->
             <p id="lastUpdated">Last Updated: </p>
             <br>
-            <p class="lead">Discover the world of AI through the eyes of a Centennial College student.</p>
-            <blockquote class="blockquote font-italic">
-                <p>Join me as I navigate the fascinating universe of Artificial Intelligence. From projects to insights, experience my academic and personal journey firsthand.</p>
-            </blockquote>
+            <!-- Add this in your body wherever you want the animation to appear -->
+            <div class="star-wars-container">
+                <div class="crawl">
+                    <div class="title">
+                        <p>Stepping into the Future</p>
+                        <h1>AI: Tools for a Better Tomorrow</h1>
+                    </div>
+                    <p>Artificial Intelligence is more than just tech jargon – it's a real, tangible tool that can solve practical problems. Whether it's making cities smarter, healthcare more efficient, or simply helping businesses run better, AI is making its mark.</p>
+                    <p>At Centennial College, I'm diving deep into this technology. My goal? To understand how we can use AI to make the world a better place to live. Join me as we explore the practical world of AI and its potential to drive positive change.</p>
+                </div>
+            </div>
+
             <br>
         </div>
         <div class="container">
