--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,12 @@
     <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
     <link rel="stylesheet" href="/content/starwars.css">
 
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 
     <!-- Icon -->
     <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
