Improve projects  pages

--- a/public/content/starwars.css
+++ b/public/content/starwars.css
@@ -1,4 +1,4 @@
-/* Filename: starwars.css */
+/* Filename: starwars.css| Author: Juan Arevalo | Date: 02-09-2023 */
 body {
     font-family: 'Arial', sans-serif;
     overflow: hidden;
